--- a/index.html
+++ b/index.html
@@ -2,49 +2,43 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flashcard</title>
     <link rel="stylesheet" href="assents/style.css">
 </head>
 <body>
-    <main>
-        <section id="container">
-            <article class="cartao">
-                <div class="cartao_conteudo">
-                    <h3 class="programacao">programação</h3>
-                    <div class="cartao_conteudo_pergunta">
-                        O que é Javascript?
-                    </div>
-                    <div class="cartao_conteudo_resposta">
-                        O Javascript é uma linguagem de programação.
-                    </div>
-                </div>
+   <main>
 
-            </article>
+   </main>
+   <section id="container">
+<article class="cartao">
+    <div class="cartao__conteudo">
+        <h3 class="programacao">Programação</h3>
+        <div class="cartao__conteudo__pergunta">
+            O que é Javascript?
+        </div>
+        <div class="cartao__conteudo__resposta">
+            O Javascript é uma linguagem de programação.
+        </div>
+    </div>
 
-            <article class="cartao">
-                <div class="cartao_conteudo">
-                    <h3 class="programacao">programação</h3>
-                    <div class="cartao_conteudo_pergunta">
-                        O que é CSS?
-                    </div>
-                    <div class="cartao_conteudo_resposta">
-                        O CSS é uma linguagem de estilização.
-                    </div>
-                </div>
+</article>
+<article class="cartao">
+    <div class="cartao__conteudo">
+        <h3 class="programacao">Programação</h3>
+        <div class="cartao__conteudo__pergunta">
+            O que é CSS?
+        </div>
+        <div class="cartao__conteudo__resposta">
+            O CSS é uma linguagem de estilização.
+        </div>
+    </div>
 
-            </article>
+</article>
 
-
-
-        </section>
-
-    </main>
-
-    <footer>
-        <p>Projeto desenvolvido pelos alunos do 2º ano, do pinhalzinho, com base na Alura.</p>
-    </footer>
-    
+   </section>
+   <footer>
+    <p>Projeto desenvolvido pelos alunos do 2º ano, do Pinhalzinho, com base na Alura</p>
+   </footer> 
 </body>
 </html>
