--- a/indx.html
+++ b/indx.html
@@ -19,53 +19,11 @@
 <div class="cartao__conteudo__resposta">
  <p>  Tem entre 4 a 6 litros.</p> 
 </div>
-        </div>
-</article>
-
-
-<article class="cartao">
-    <div class="cartao__conteudo">
-<h3 class="programacao">Matematica</h3>
-<div class="cartao__conteudo__pergunta">
-  <p>Quantas casas decimais tem o número pi?</p>
 </div>
-<div class="cartao__conteudo__resposta">
- <p> Infinitas</p>
-</div>
-    </div>
 </article>
 
 
 
-</section>
-
-<body>
-    <main>
-<section id="container">
-    <article class="cartao">
-        <div class="cartao__conteudo">
-<h3 class="programacao">Geografia</h3>
-<div class="cartao__conteudo__pergunta">
-   <p> Qual dessas capitais é conhecida com Capital Ecológica do Brasil?</p>
-</div>
-<div class="cartao__conteudo__resposta">
- <p> Curitiba</p> 
-</div>
-        </div>
-</article>
-
-
-<article class="cartao">
-    <div class="cartao__conteudo">
-<h3 class="programacao">Química</h3>
-<div class="cartao__conteudo__pergunta">
-  <p>Em que ordem surgiram os modelos atômicos?</p>
-</div>
-<div class="cartao__conteudo__resposta">
- <p> Dalton, Thomson, Rutherford, Rutherford-Bohr</p>
-</div>
-    </div>
-</article>
 
 
 
@@ -74,5 +32,7 @@
     <footer>
         <p>Projeto desenvolvido pleos alunos do 2ºano, do pinhalzinho, com base na Alura</p>
     </footer>
+    <script src="app.js"></script>
+    <script src="pergunta.js"></script>
 </body>
 </html>
